--- a/app/src/main/res/layout/activity_task_sign_off.xml
+++ b/app/src/main/res/layout/activity_task_sign_off.xml
@@ -69,14 +69,12 @@
             android:id="@+id/task_sign_off_due_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/activity_task_sign_off_due_in"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/task_sign_off_value_tv"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/task_sign_off_last_at_tv" />
 
@@ -84,34 +82,28 @@
             android:id="@+id/task_sign_off_value_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintBaseline_toBaselineOf="@+id/task_sign_off_due_tv"
-            app:layout_constraintEnd_toStartOf="@+id/task_sign_off_hrs_tv"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/task_sign_off_due_tv" />
+            app:layout_constraintEnd_toStartOf="@+id/task_sign_off_hrs_tv" />
 
         <TextView
             android:id="@+id/task_sign_off_hrs_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginEnd="16dp"
             android:text="@string/hours"
             app:layout_constraintBaseline_toBaselineOf="@+id/task_sign_off_value_tv"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/task_sign_off_value_tv" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/task_sign_off_interval_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="@string/activity_task_sign_off_interval"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintEnd_toStartOf="@+id/task_sign_off_interval_value_tv"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/task_sign_off_task_title_tv" />
 
@@ -119,34 +111,28 @@
             android:id="@+id/task_sign_off_interval_value_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintBaseline_toBaselineOf="@+id/task_sign_off_interval_tv"
-            app:layout_constraintEnd_toStartOf="@+id/task_sign_off_interval_hours_tv"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/task_sign_off_interval_tv" />
+            app:layout_constraintEnd_toStartOf="@+id/task_sign_off_interval_hours_tv" />
 
         <TextView
             android:id="@+id/task_sign_off_interval_hours_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginEnd="16dp"
             android:text="@string/hours"
             app:layout_constraintBaseline_toBaselineOf="@+id/task_sign_off_interval_value_tv"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/task_sign_off_interval_value_tv" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/task_sign_off_last_at_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="@string/activity_task_sign_off_last_at"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintEnd_toStartOf="@+id/task_sign_off_last_at_value_tv"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/task_sign_off_interval_tv" />
 
@@ -154,23 +140,20 @@
             android:id="@+id/task_sign_off_last_at_value_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintBaseline_toBaselineOf="@+id/task_sign_off_last_at_tv"
-            app:layout_constraintEnd_toStartOf="@+id/task_sign_off_last_at_hours_tv"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/task_sign_off_last_at_tv" />
+            app:layout_constraintEnd_toStartOf="@+id/task_sign_off_last_at_hours_tv" />
 
         <TextView
             android:id="@+id/task_sign_off_last_at_hours_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginEnd="16dp"
             android:text="@string/hours"
             app:layout_constraintBaseline_toBaselineOf="@+id/task_sign_off_last_at_value_tv"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/task_sign_off_last_at_value_tv" />
+            app:layout_constraintEnd_toEndOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
@@ -190,6 +173,8 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
         android:background="@drawable/accent_color_border"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task_sign_off_task_info_cl_bottom_border">
@@ -239,5 +224,14 @@
             app:layout_constraintStart_toEndOf="@+id/task_sign_off_value_et" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <fragment
+        android:id="@+id/task_sign_off_info_panel_f"
+        android:name="com.slack.motometer.ui.fragments.CollapsibleInfoPanel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
