--- a/app/src/main/res/layout/activity_tasks_overview.xml
+++ b/app/src/main/res/layout/activity_tasks_overview.xml
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tasks_overview_header_f" />
 
     <ListView
-        android:id="@+id/taskListView"
+        android:id="@+id/tasks_overview_tasks_list_view_lv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="4dp"
@@ -53,10 +53,12 @@
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp"
         android:divider="#00000000"
-        app:layout_constraintBottom_toTopOf="@+id/tasks_overview_nav_bar"
+        app:layout_constraintBottom_toTopOf="@+id/tasks_overview_info_panel_f"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tasks_overview_header_f" />
+        app:layout_constraintTop_toBottomOf="@+id/tasks_overview_header_f" >
+
+    </ListView>
 
     <TextView
         android:id="@+id/empty_task_item"
@@ -70,6 +72,15 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tasks_overview_header_bottom_border" />
+
+    <fragment
+        android:id="@+id/tasks_overview_info_panel_f"
+        android:name="com.slack.motometer.ui.fragments.CollapsibleInfoPanel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/tasks_overview_nav_bar_top_border"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <View
         android:id="@+id/tasks_overview_nav_bar_top_border"
