--- a/app/src/main/res/menu/pre_ride_menu.xml
+++ b/app/src/main/res/menu/pre_ride_menu.xml
@@ -13,4 +13,9 @@ xmlns:android="http://schemas.android.com/apk/res/android">
         android:title="@string/toolbar_pre_ride_delete_title"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/toolbar_pre_ride_delete_all_cl_items"
+        android:title="@string/toolbar_pre_ride_delete_all_title"
+        app:showAsAction="never" />
+
 </menu>
